# sizelib

./: .gitignore  CHANGELOG.md  README.md  SDK.md  pyproject.toml
lib/: .gitignore  LICENSE  README.md
lib/src/sizelib/: __init__.py  _humanize.py  config.py  py.typed
src/sizelib/: __init__.py  exceptions.py  humanize.py  size.py
web/: README.md  components.json  next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
web/src/app/author/: page.tsx
web/src/app/humanize/: layout.tsx  page.tsx
web/src/app/installation/: page.tsx
web/src/app/introduction/: page.tsx
web/src/app/og/: page.tsx
web/src/app/resources/: page.tsx
web/src/app/size/: page.tsx
web/src/components/: DocBlocks.tsx  DocsLayout.tsx  Figlet.tsx  Navbar.tsx  Search.tsx  Sidebar.tsx
web/src/components/ui/: animated-theme-toggler.tsx  badge.tsx  button.tsx  click-spark.tsx  dialog.tsx  morphing-text.tsx
web/src/data/: docs.ts
