[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sizelib"
version = "0.1.2"
description = "A simple, pythonic library for working with and humanizing file sizes."
authors = [{name = "Saptarshi Roy"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["size", "bytes", "file-size", "humanize", "utility", "formatting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/saptarshiroy39/sizelib"
Homepage = "https://pypi.org/project/sizelib"
Documentation = "https://sizelib.hirishi.in"
"Bug Tracker" = "https://github.com/saptarshiroy39/sizelib/issues"

[tool.setuptools]
package-data = {"sizelib" = ["py.typed"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
